add .env to gitignore

--- a/aiverify-portal/.gitignore
+++ b/aiverify-portal/.gitignore
@@ -27,6 +27,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
@@ -37,3 +38,4 @@ next-env.d.ts
 
 # dev env
 public/uploads
+
