--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/pyproject.toml
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aiverify-blur-corruptions"
-description = "Part of AI Verify image corruption toolbox. This package includes algorithms that adds blur corruptions (defocus, gaussian, glass, horizontal motion, vertical motion and zoom Blur) to images at 5 severity levels, to test the robustness of machine learning models."
+description = "Part of AI Verify image corruption toolbox. This package includes algorithms that adds blur corruptions (defocus, gaussian, glass, horizontal motion, vertical motion and zoom Blur) to images at different severity levels, to test the robustness of machine learning models."
 authors = [{ name = "AI Verify" }]
 readme = "README.md"
 dependencies = [
