rename aiverify-portal service to portal

--- a/deployment/docker-compose-dev/compose.yaml
+++ b/deployment/docker-compose-dev/compose.yaml
@@ -24,7 +24,7 @@ services:
     networks:
       - aiverify_net
 
-  aiverify-portal:
+  portal:
     build:
       context: ../../
       dockerfile: aiverify-portal/Dockerfile
