--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions/.vscode/launch.json
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions/.vscode/launch.json
@@ -16,32 +16,16 @@
         "data/raw_fashion_image_10",
         "--model_path",
         "pipeline/multiclass_classification_image_mnist_fashion",
-        "--ground_truth_path",
-        "data/pickle_pandas_fashion_mnist_annotated_labels_10.sav",
-        "--ground_truth",
-        "label",
         "--model_type",
         "CLASSIFICATION",
-        "--run_pipeline",
-        "--annotated_ground_truth_path",
+        "--ground_truth_path",
         "data/pickle_pandas_fashion_mnist_annotated_labels_10.sav",
-        "--set_seed",
-        "10",
+        "--ground_truth_label",
+        "label",
         "--file_name_label",
         "file_name",
-        "--corruptions",
-        "gaussian_noise",
-        "salt_and_pepper_noise",
-        "--salt_and_pepper_noise_amount",
-        "0.1",
-        "0.2",
-        "0.3",
-        "--poisson_noise_scale",
-        "1",
-        "2",
-        "3",
-        "4",
-        "5"
+        "--set_seed",
+        "10"
       ],
       "justMyCode": false
     }
