--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/.vscode/launch.json
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/.vscode/launch.json
@@ -16,34 +16,16 @@
         "data/raw_fashion_image_10",
         "--model_path",
         "pipeline/multiclass_classification_image_mnist_fashion",
-        "--ground_truth_path",
-        "data/pickle_pandas_fashion_mnist_annotated_labels_10.sav",
-        "--ground_truth",
-        "label",
         "--model_type",
         "CLASSIFICATION",
-        "--run_pipeline",
-        "--annotated_ground_truth_path",
+        "--ground_truth_path",
         "data/pickle_pandas_fashion_mnist_annotated_labels_10.sav",
-        "--set_seed",
-        "10",
+        "--ground_truth_label",
+        "label",
         "--file_name_label",
         "file_name",
-        "--corruptions",
-        "horizontal_motion_blur",
-        "zoom_blur",
-        "--horizontal",
-        "1",
-        "2",
-        "3",
-        "4",
-        "5",
-        "--vertical",
-        "1",
-        "3",
-        "5",
-        "--zoom",
-        "6"
+        "--set_seed",
+        "10"
       ],
       "justMyCode": false
     }
