build and push docker image to ghcr

--- a/.github/workflows/v2-docker-build-push.yml
+++ b/.github/workflows/v2-docker-build-push.yml
@@ -37,7 +37,7 @@ on:
         default: 'aiverify-apigw'
         
   push:
-    branches: [ ci/v2-docker-push-ghcr' ]
+    branches: [ ci/docker-push-ghcr' ]
     
 # Allow one concurrent deployment
 concurrency:
