update test-engine and stock plugins to v2.0.0 and delete dist

--- a/aiverify-test-engine/pyproject.toml
+++ b/aiverify-test-engine/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aiverify-test-engine"
-version = "2.0.0a2"
+version = "2.0.0"
 authors = [{ name = "AI Verify" }]
 description = "AI Verify Test Engine provides core interfaces, converters, data, model and plugin managers to facilitate the development of tests for AI systems. It is used as a base library for all AI Verify official stock-plugins and can be used to develop custom plugins."
 dependencies = [
