--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions/pyproject.toml
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions/pyproject.toml
@@ -7,7 +7,7 @@ dependencies = [
     "numpy==1.26.4",
     "pandas==2.2.2",
     "pillow==10.4.0",
-    "aiverify-test-engine>=2.0.0a1",
+    "aiverify-test-engine>=2.0.0",
     "albumentations>=2.0.4",
 ]
 requires-python = ">=3.10,<3.12"
