--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -41,7 +41,7 @@
         "CLASSIFICATION",
         "--ground_truth_path",
         "data/pickle_pandas_fashion_mnist_annotated_labels_10.sav",
-        "--ground_truth_label",
+        "--ground_truth",
         "label",
         "--file_name_label",
         "file_name",
@@ -69,7 +69,7 @@
         "CLASSIFICATION",
         "--ground_truth_path",
         "data/pickle_pandas_fashion_mnist_annotated_labels_10.sav",
-        "--ground_truth_label",
+        "--ground_truth",
         "label",
         "--file_name_label",
         "file_name",
