--- a/aiverify-apigw/aiverify-apigw-node/package.json
+++ b/aiverify-apigw/aiverify-apigw-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aiverify-apigw-node",
-  "version": "2.0.0a1",
+  "version": "2.0.0",
   "description": "Collection of node scripts for aiverify-apigw",
   "type": "module",
   "scripts": {
