--- a/.github/workflows/v2-docker-build-push.yml
+++ b/.github/workflows/v2-docker-build-push.yml
@@ -13,16 +13,6 @@ env:
   GITHUB_TOKEN: ${{ github.token }}
   
 on:
-  # Runs when a pull request to main is being assigned
-  # If there are changes in the following specified paths.
-  pull_request:
-    types: [ assigned, synchronize ]
-    branches:
-      - 'main'
-    paths:
-      - 'aiverify-test-engine-worker/**'
-      - 'aiverify-apigw/**'
-      - 'aiverify-portal/**'
 
   # Run this workflow manually from Actions tab
   workflow_dispatch:
@@ -40,14 +30,13 @@ on:
         description: 'Image tag'
         required: false
         
-  push:
-    branches: [ ci/docker-push-ghcr ]
-    # paths:
-    #   - 'aiverify-test-engine-worker/**'
-    #   - 'aiverify-apigw/**'
-    #   - 'aiverify-portal/**'
+  # push:
+  #   branches: [ main ]
+  #   paths:
+  #     - 'aiverify-test-engine-worker/**'
+  #     - 'aiverify-apigw/**'
+  #     - 'aiverify-portal/**'
 
-    
 # Allow one concurrent deployment
 concurrency:
   group: ${{ github.repository }}-${{ github.workflow }}
