--- a/deployment/kubernetes/apigw.yaml
+++ b/deployment/kubernetes/apigw.yaml
@@ -44,18 +44,18 @@ spec:
           image: ghcr.io/aiverify-foundation/aiverify-apigw
           ports:
             - containerPort: 4000
-          livenessProbe:
-            httpGet:
-              path: /docs
-              port: 4000
-            initialDelaySeconds: 30
-            periodSeconds: 10
-          readinessProbe:
-            httpGet:
-              path: /docs
-              port: 4000
-            initialDelaySeconds: 30
-            periodSeconds: 10
+          # livenessProbe:
+          #   httpGet:
+          #     path: /docs
+          #     port: 4000
+          #   initialDelaySeconds: 30
+          #   periodSeconds: 10
+          # readinessProbe:
+          #   httpGet:
+          #     path: /docs
+          #     port: 4000
+          #   initialDelaySeconds: 30
+          #   periodSeconds: 10
           env:
             - name: APIGW_DATA_DIR
               value: "/data"
