--- a/deployment/docker-compose/compose.yaml
+++ b/deployment/docker-compose/compose.yaml
@@ -8,11 +8,11 @@ services:
       - "4000:4000"
     volumes:
       - apigw_data:/data
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:4000/docs"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+    # healthcheck:
+    #   test: ["CMD", "curl", "-f", "http://localhost:4000/docs"]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
     environment:
       APIGW_LOG_LEVEL: "debug"
       APIGW_DATA_DIR: "/data"
@@ -27,11 +27,11 @@ services:
       - portal
     depends_on:
       - apigw
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+    # healthcheck:
+    #   test: ["CMD", "curl", "-f", "http://localhost:3000/"]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
     ports:
       - "3000:3000"
     environment:
@@ -45,11 +45,11 @@ services:
     profiles:
       - automated-tests-venv
       - automated-tests-docker
-    healthcheck:
-      test: ["CMD", "valkey-cli", "ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+    # healthcheck:
+    #   test: ["CMD", "valkey-cli", "ping"]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
     ports:
       - '6379:6379'
     networks:
