--- a/stock-plugins/aiverify.stock.veritas/algorithms/veritastool/pyproject.toml
+++ b/stock-plugins/aiverify.stock.veritas/algorithms/veritastool/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
     "matplotlib-inline==0.1.6",
     "tqdm>=4.67.1",
     "Jinja2>=3.1.5",
-    "aiverify-test-engine>=2.0.0a2",
+    "aiverify-test-engine>=2.0.0",
 ]
 requires-python = ">=3.10,<3.12"
 dynamic = ["version"]
