add target development for portal

--- a/deployment/docker-compose-dev/compose.yaml
+++ b/deployment/docker-compose-dev/compose.yaml
@@ -28,6 +28,7 @@ services:
     build:
       context: ../../
       dockerfile: aiverify-portal/Dockerfile
+      target: development
     profiles:
       - portal
     depends_on:
