add multistage for development and production build targets

--- a/aiverify-portal/Dockerfile
+++ b/aiverify-portal/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:23-alpine
+FROM node:23-alpine as base
 ARG TARGETARCH
 
 WORKDIR /app
@@ -14,9 +14,6 @@ RUN npm install
 RUN npm run build
 
 # install dependencies
-WORKDIR /app/aiverify-portal
-RUN npm install
-RUN npm link ../aiverify-shared-library
 # RUN npm run build
 
 # ENV NODE_ENV=production
@@ -24,5 +21,24 @@ ENV APIGW_HOST=http://host.docker.internal:4000
 ENV NEXT_PUBLIC_APIGW_HOST=http://127.0.0.1:4000
 EXPOSE 3000
 
+# development build
+FROM base as development
+
+WORKDIR /app/aiverify-portal
+
+RUN npm install
+RUN npm link ../aiverify-shared-library
+
 # ENTRYPOINT ["npm", "run", "start"]
 ENTRYPOINT ["npm", "run", "dev"]
+
+# production build
+FROM base as production
+
+WORKDIR /app/aiverify-portal
+
+RUN npm install
+RUN npm link ../aiverify-shared-library
+RUN npm run build
+
+ENTRYPOINT ["npm", "start"]
