--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,12 +73,15 @@ nav:
       - Robustness Test: ./detailed-guide/robustness-test.md
       - Supported Versions: ./detailed-guide/supported-versions.md
       
-  - Troubleshooting: trouble-shooting/troubleshooting.md
   - FAQs: others/faq.md
+  - Appendix: 
+      - Standalone model vs Model pipeline: ./appendix/standalone-vs-pipeline.md
+      - Understand the Fairness Decision Tree: ./appendix/use-fairness-tree.md
+
   - Compatibility Table: others/compatibility.md
   - References:
-      - AI Verify Plugins: https://imda-btg.github.io/aiverify-developer-tools/stock_plugins/
-      - Developer Documentation: https://imda-btg.github.io/aiverify-developer-tools/
+      - AI Verify Developer Tools: https://github.com/aiverify-foundation/aiverify-developer-tools/
+      - Developer Documentation: https://aiverify-foundation.github.io/aiverify-developer-tools/getting_started/start_here/
   # - Release Notes: TODO
   #     - License: test.md
   #     - Contact Information: test.md
