--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -5,21 +5,21 @@ name: v2 Smoke Test
 on:
   # Runs when a pull request review is being submitted
   pull_request:
-    types: [ assigned, synchronize ]
+    types: [assigned, synchronize]
     branches:
-      - 'v2.x'
+      - "v2.x"
 
   # Run this workflow manually from Actions tab
   workflow_dispatch:
     inputs:
       branch_to_test:
-        description: 'Branch or tag to run test'
+        description: "Branch or tag to run test"
         required: true
-        default: 'v2.x'
+        default: "v2.x"
         type: string
 
   push:
-    branches: [ v2.x ]
+    branches: [v2.x]
 
 # Allow one concurrent deployment
 concurrency:
@@ -27,9 +27,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-
   smoke-test:
-
     #  Run only when PR is approved
     if: (github.event_name == 'pull_request' && github.event.pull_request.assignee != null) || github.event_name == 'workflow_dispatch' || github.event_name == 'push'
     runs-on: ubuntu-latest
@@ -48,11 +46,11 @@ jobs:
           ref: v2.x
           repository: aiverify-foundation/smoke-testing
           path: smoke-testing
-    
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Set ROOT_PATH Variable
         run: |
@@ -104,7 +102,7 @@ jobs:
           pip install -e .
           python -m aiverify_digital_corruptions \
             --data_path ${{ env.ROOT_PATH }}/data/raw_fashion_image_10 \
-            --model_path ${{ env.ROOT_PATH }}/pipeline/multiclass_classification_image_mnist_fashion \
+            --model_path ${{ env.ROOT_PATH }}/pipeline/sample_fashion_mnist_sklearn \
             --ground_truth_path ${{ env.ROOT_PATH }}/data/pickle_pandas_fashion_mnist_annotated_labels_10.sav \
             --ground_truth label \
             --model_type CLASSIFICATION \
