add ARGS for NEXT_PUBLIC_APIGW_HOST and APIGW_HOST

--- a/aiverify-portal/Dockerfile
+++ b/aiverify-portal/Dockerfile
@@ -1,6 +1,9 @@
 FROM node:23-alpine as base
 ARG TARGETARCH
 
+ARG NEXT_PUBLIC_APIGW_HOST=http://127.0.0.1:4000
+ARG APIGW_HOST=http://host.docker.internal:4000
+
 WORKDIR /app
 
 # copy files
@@ -17,8 +20,8 @@ RUN npm run build
 # RUN npm run build
 
 # ENV NODE_ENV=production
-ENV APIGW_HOST=http://host.docker.internal:4000
-ENV NEXT_PUBLIC_APIGW_HOST=http://127.0.0.1:4000
+ENV NEXT_PUBLIC_APIGW_HOST=$NEXT_PUBLIC_APIGW_HOST
+ENV APIGW_HOST=$APIGW_HOST
 EXPOSE 3000
 
 # development build
