--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,7 +80,7 @@ nav:
 
   - References:
       - AI Verify Developer Tools: https://github.com/aiverify-foundation/aiverify-developer-tools/
-      - Developer Documentation: https://aiverify-foundation.github.io/aiverify-developer-tools/getting_started/start_here/
+  # - Developer Documentation: https://aiverify-foundation.github.io/aiverify-developer-tools/getting_started/start_here/
   # - Release Notes: TODO
   #     - License: test.md
   #     - Contact Information: test.md
