set image pull policy to never, build locally

--- a/deployment/kubernetes-dev/apigw.yaml
+++ b/deployment/kubernetes-dev/apigw.yaml
@@ -42,6 +42,7 @@ spec:
       containers:
         - name: apigw
           image: aiverify-apigw
+          imagePullPolicy: Never
           ports:
             - containerPort: 4000
           # livenessProbe:
