--- a/deployment/kubernetes-dev/portal.yaml
+++ b/deployment/kubernetes-dev/portal.yaml
@@ -29,6 +29,7 @@ spec:
       containers:
         - name: portal
           image: aiverify-portal
+          imagePullPolicy: Never
           ports:
             - containerPort: 3000
           # livenessProbe:
